syntax = "proto3";
package mock.mock.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "mock/mock/v1/params.proto";

option go_package = "github.com/test/mock/x/mock/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/test/mock/mock/v1/params";
  }
    rpc Price(QueryPriceRequest)
      returns (QueryPriceResponse) {
    option (google.api.http).get =
      "/mock/mock/price";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryPriceRequest {
  string denom1 = 1;
  string denom2 = 2;
}

message QueryPriceResponse {
  string price = 1;
}